--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     background-color: #00000000;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    color: black;
 }
 
 .calculator button:hover {
